--- a/pom.xml
+++ b/pom.xml
@@ -178,14 +178,15 @@
                     </webApp>
                 </configuration>
 	</plugin>
-	<plugin>
-    		<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-surefire-plugin</artifactId>
-    		<version>2.19.1</version>
-    		<configuration>
-        		<testFailureIgnore>true</testFailureIgnore>
-    		</configuration>
-	</plugin>
+	<plugins>
+		<plugin>
+      			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+    			<configuration>
+        			<useSystemClassLoader>false</useSystemClassLoader>
+    			</configuration>
+    		</plugin>
+	</plugins>
 		<!-- CODE COVERAGE -->
  		    <plugin>
  		        <groupId>org.jacoco</groupId>
