--- a/pom.xml
+++ b/pom.xml
@@ -179,12 +179,14 @@
                 </configuration>
 	</plugin>
 	<plugin>
-      		<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-surefire-plugin</artifactId>
-    		<configuration>
-        		<useSystemClassLoader>false</useSystemClassLoader>
-    		</configuration>
-  	</plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                <testFailureIgnore>true</testFailureIgnore>
+                <shutdown>kill</shutdown> <!-- Use it if required-->
+                </configuration>
+            </plugin>
 		<!-- CODE COVERAGE -->
  		    <plugin>
  		        <groupId>org.jacoco</groupId>
