--- a/ansible/tomcat_setup.yml
+++ b/ansible/tomcat_setup.yml
@@ -5,13 +5,13 @@
     tom_url: https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.37/bin/apache-tomcat-8.5.37.tar.gz
 
   tasks:
-    - name: Install JDK on Centos 6/7
+    - name: Install JDK on Centos 7
       yum:
         name: java-1.8.0-openjdk.x86_64
         state: present
       when: ansible_distribution == 'CentOS'
 
-    - name: Install JDK on Ubuntu 14/15/16/18
+    - name: Install JDK on Ubuntu
       apt:
         name: openjdk-8-jdk
         state: present
@@ -70,41 +70,19 @@
          mode: "a+x"
       when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '7'      
 
-    - name: Setup tomcat SVC file on Centos 6
-      template:
-         src: templates/epel6-svcfile.j2
-         dest: /etc/init.d/tomcat
-         mode: "a+x"
-      when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6'
-
-    - name: Setup tomcat SVC file on ubuntu 14/15
-      template:
-         src: templates/ubuntu14_15-svcfile.j2
-         dest: /etc/init.d/tomcat
-         mode: "a+x"
-      when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version < '16'
-
-    - name: Setup tomcat SVC file on ubuntu 16 and 18
+    - name: Setup tomcat SVC file on ubuntu 16+
       template:
          src: templates/ubuntu16-svcfile.j2
          dest: /etc/systemd/system/tomcat.service
          mode: "a+x"
       when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version >= '16'
 
-    - name: Reload tomcat svc config in ubuntu 14/15
-      command: update-rc.d tomcat defaults
-      when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version < '16'
-
-    - name: Reload tomcat svc config in Centos 6
-      command: chkconfig --add tomcat
-      when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6'
-
     - name: just force systemd to reread configs (2.4 and above)
       systemd:
         daemon_reload: yes 
-      when: ansible_distribution_major_version > '6' or ansible_distribution_major_version > '15'
+      when: ansible_distribution == 'CentOS' and ansible_distribution_major_version == '7' or ansible_distribution == 'Ubuntu' and ansible_distribution_major_version >= '16'
 
-    - name: Start & Enable TOmcat 8
+    - name: Start & Enable Tomcat 8
       service:
         name: tomcat
         state: started
